// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PendingBetsTable renders with bets 1`] = `
<div
  className="PendingBetsTable-component"
>
  <div
    className="pending-bets-info-table-title-text"
  >
    Pending Bets (
    3
    )
  </div>
  <table
    className="pending-bets-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Action
        </th>
      </tr>
      <tr>
        <td>
          foo
        </td>
        <td
          className="pending-bets-info-table-bet-amount"
        >
          $ 10
        </td>
        <td>
          <button
            aria-label="Remove foo bet"
            className="remove-bet-button"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#ff4444",
                "border": "none",
                "borderRadius": "50%",
                "color": "white",
                "cursor": "pointer",
                "fontSize": "12px",
                "height": "24px",
                "width": "24px",
              }
            }
          >
            ✕
          </button>
        </td>
      </tr>
      <tr>
        <td>
          bar
        </td>
        <td
          className="pending-bets-info-table-bet-amount"
        >
          $ 20
        </td>
        <td>
          <button
            aria-label="Remove bar bet"
            className="remove-bet-button"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#ff4444",
                "border": "none",
                "borderRadius": "50%",
                "color": "white",
                "cursor": "pointer",
                "fontSize": "12px",
                "height": "24px",
                "width": "24px",
              }
            }
          >
            ✕
          </button>
        </td>
      </tr>
      <tr>
        <td>
          baz
        </td>
        <td
          className="pending-bets-info-table-bet-amount"
        >
          $ 30
        </td>
        <td>
          <button
            aria-label="Remove baz bet"
            className="remove-bet-button"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#ff4444",
                "border": "none",
                "borderRadius": "50%",
                "color": "white",
                "cursor": "pointer",
                "fontSize": "12px",
                "height": "24px",
                "width": "24px",
              }
            }
          >
            ✕
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PendingBetsTable renders with no bets 1`] = `
<div
  className="PendingBetsTable-component"
>
  <div
    className="pending-bets-info-table-title-text"
  >
    Pending Bets (
    0
    )
  </div>
  <table
    className="pending-bets-info-table"
  >
    <tbody>
      <tr
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <th>
          Bet Name
        </th>
        <th>
          Bet Amount
        </th>
        <th>
          Action
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;
